--- a/src/components/layout/styles.module.scss
+++ b/src/components/layout/styles.module.scss
@@ -1,6 +1,7 @@
 .container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   background: black;
   display: flex;
   width: 100%;
