--- a/src/components/navbar/styles.module.scss
+++ b/src/components/navbar/styles.module.scss
@@ -7,6 +7,9 @@
 }
 
 .navbar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   background: white;
   width: 90%;
   height: 6em;
@@ -14,4 +17,15 @@
   @media screen and (min-width: 1200px) {
     width: 1200px;
   }
+}
+
+.links_container {
+  position: absolute;
+  left: calc(50% - 15em);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 30em;
+  background: blue;
 }
