--- a/src/components/layout/styles.module.scss
+++ b/src/components/layout/styles.module.scss
@@ -1,17 +1,17 @@
 .container {
+  outline: 1px dashed white;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: black;
   display: flex;
   width: 100%;
   height: 100vh;
 }
 
 .innerContainer {
+  outline: 1px dashed white;
   width: 90%;
   height: 100%;
-  background: grey;
 
   @media screen and (min-width: 1200px) {
     width: 1200px;
