--- a/src/components/navbar/styles.module.scss
+++ b/src/components/navbar/styles.module.scss
@@ -1,16 +1,16 @@
 .container {
+  outline: 1px dashed white;
   display: flex;
   justify-content: center;
-  background: rgba(255, 0, 0, 0.2);
   width: 100%;
   height: 6em;
 }
 
 .navbar {
+  outline: 1px dashed white;
   display: flex;
   flex-direction: row;
   align-items: center;
-  background: white;
   width: 90%;
   height: 6em;
 
@@ -20,6 +20,7 @@
 }
 
 .links_container {
+  outline: 1px dashed white;
   position: absolute;
   left: calc(50% - 15em);
   display: flex;
@@ -27,5 +28,4 @@
   justify-content: space-around;
   align-items: center;
   width: 30em;
-  background: blue;
 }
