--- a/src/components/navbar/styles.module.scss
+++ b/src/components/navbar/styles.module.scss
@@ -17,6 +17,11 @@
   @media screen and (min-width: 1200px) {
     width: 1200px;
   }
+
+  // Mobile
+  @media screen and (max-width: 1100px) {
+    justify-content: center;
+  }
 }
 
 .links_container {
@@ -28,4 +33,9 @@
   justify-content: space-around;
   align-items: center;
   width: 30em;
+
+  // Mobile
+  @media screen and (max-width: 1100px) {
+    display: none;
+  }
 }
