--- a/src/pages/home/styles.module.scss
+++ b/src/pages/home/styles.module.scss
@@ -7,6 +7,8 @@
 
 .hero {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
   width: 100%;
   height: 50em;
@@ -17,3 +19,10 @@
   text-align: center;
 }
 
+.primary {
+  background: red;
+}
+
+.secondary {
+  background: green;
+}
