--- a/src/pages/home/styles.module.scss
+++ b/src/pages/home/styles.module.scss
@@ -13,16 +13,13 @@
   width: 100%;
   height: 50em;
   border-bottom: 1px solid #7C7C7C;
+
+  // Mobile
+  @media screen and (max-width: 1100px) {
+    height: 30em;
+  }
 }
 
 .text_container {
   text-align: center;
-}
-
-.primary {
-  background: red;
-}
-
-.secondary {
-  background: green;
 }
