--- a/src/pages/home/styles.module.scss
+++ b/src/pages/home/styles.module.scss
@@ -7,9 +7,8 @@
 
 .hero {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: space-between;
   width: 100%;
   height: 50em;
   border-bottom: 1px solid #7C7C7C;
@@ -22,4 +21,25 @@
 
 .text_container {
   text-align: center;
+}
+
+.hero_info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+}
+
+.hero_content {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 50%;
+  height: 100%;
+}
+
+.video_placeholder {
+  height: 19em;
+  width: 32em;
+  background: black;
 }
