--- a/src/components/navbar/styles.module.scss
+++ b/src/components/navbar/styles.module.scss
@@ -11,6 +11,7 @@
   align-items: center;
   width: 90%;
   height: 6em;
+  border-bottom: 1px solid #7C7C7C;
 
   @media screen and (min-width: 1300px) {
     width: 1200px;
