--- a/src/components/navbar/styles.module.scss
+++ b/src/components/navbar/styles.module.scss
@@ -35,6 +35,7 @@
   & * {
     padding: 0.7em !important;
     border-radius: 6px;
+    transition: 0.2s
   } :hover {
     background: #1A1E26;
     cursor: pointer;
