Changed drop shadow color

--- a/src/components/navbar/styles.module.scss
+++ b/src/components/navbar/styles.module.scss
@@ -43,11 +43,9 @@
     cursor: pointer;
     color: white !important;
   }
-
-
 }
 
 .logo {
   height: 3em;
-  filter: drop-shadow(3px 3px 2px #000000);
+  filter: drop-shadow(3px 3px 2px #0D0F11);
 }
