--- a/src/components/button/styles.module.scss
+++ b/src/components/button/styles.module.scss
@@ -5,11 +5,11 @@
   border-radius: 10px;
   transtion: 3s;
   border: 2px solid #A10000;
-  filter: drop-shadow(8px 8px 2px #000000);
+  filter: drop-shadow(8px 8px 2px #0D0F11);
 
   & :hover {
     cursor: pointer;
     transform: translate(4px, 4px);
-    filter: drop-shadow(2px 2px 2px #000000);
+    filter: drop-shadow(2px 2px 2px #0D0F11);
   }
 }
