--- a/src/components/navbar/styles.module.scss
+++ b/src/components/navbar/styles.module.scss
@@ -32,10 +32,12 @@
     display: none;
   }
 
+  // Nav links
   & * {
     padding: 0.7em !important;
     border-radius: 6px;
-    transition: 0.2s
+    transition: 0.2s;
+    text-decoration: none;
   } 
 
   & :hover {
