--- a/src/pages/home/styles.module.scss
+++ b/src/pages/home/styles.module.scss
@@ -34,8 +34,8 @@
 
 .hero_content {
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  flex-direction: column;
+  justify-content: center;
   width: 50%;
   height: 100%;
 
