--- a/src/pages/home/styles.module.scss
+++ b/src/pages/home/styles.module.scss
@@ -10,7 +10,7 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  height: 50em;
+  height: calc(100vh - 6em);
   border-bottom: 1px solid #7C7C7C;
 
   // Mobile
