--- a/src/pages/home/styles.module.scss
+++ b/src/pages/home/styles.module.scss
@@ -8,7 +8,7 @@
 .hero {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
   height: calc(100vh - 6em);
   border-bottom: 1px solid #7C7C7C;
@@ -36,6 +36,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: flex-end;
   width: 50%;
   height: 100%;
 
