--- a/src/components/footer/styles.module.scss
+++ b/src/components/footer/styles.module.scss
@@ -1,10 +1,26 @@
 .container {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.socials {
+  display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  height: 10em;
   width: 100%;
-  margin-top: 2em;
+  margin: 2em 0 1em 0;
+}
+
+.links {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 2em;
+
+  & * {
+    text-decoration: none;
+  }
 }
 
 .icon {
