--- a/src/pages/token/styles.module.scss
+++ b/src/pages/token/styles.module.scss
@@ -4,3 +4,44 @@
   width: 100%;
   height: 100%;
 }
+
+.hero {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  height: calc(100vh - 6em);
+  border-bottom: 1px solid #7C7C7C;
+
+  // Mobile
+  @media screen and (max-width: 1100px) {
+    height: auto;
+    padding: 4em 0 4em 0;
+    justify-content: center;
+  }
+}
+
+.text_container {
+  text-align: center;
+}
+
+.hero_info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 35em;
+}
+
+.hero_content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  width: 50%;
+  height: 100%;
+
+  // Mobile
+  @media screen and (max-width: 1100px) {
+    display: none;
+  }
+}
