--- a/src/components/navbar/styles.module.scss
+++ b/src/components/navbar/styles.module.scss
@@ -1,3 +1,25 @@
+.hamburgerMenu {
+  display: none;
+
+  & :hover {
+    cursor: pointer;
+  }
+
+  // Mobile
+  @media screen and (max-width: 1100px) {
+    display: block;
+  }
+}
+
+.nav_logo_container {
+  display: flex;
+  text-decoration: none;
+
+  & :hover {
+    cursor: pointer;
+  }
+}
+
 .container {
   display: flex;
   justify-content: center;
@@ -9,6 +31,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-between;
   width: 90%;
   height: 6em;
   border-bottom: 1px solid #7C7C7C;
