--- a/src/components/navbar/styles.module.scss
+++ b/src/components/navbar/styles.module.scss
@@ -30,6 +30,7 @@
 .navbar {
   display: flex;
   flex-direction: row;
+  user-select: none;
   align-items: center;
   justify-content: space-between;
   width: 90%;
