Fix token page button layout

--- a/src/pages/token/styles.module.scss
+++ b/src/pages/token/styles.module.scss
@@ -5,6 +5,12 @@
   height: 100%;
 }
 
+.button_container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
 .hero {
   display: flex;
   align-items: center;
