--- a/src/pages/home/styles.module.scss
+++ b/src/pages/home/styles.module.scss
@@ -1,18 +1,25 @@
 .main_container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100%;
   height: 100%;
 }
 
 .logo {
-  height: 40em;
+  height: 30em;
+}
+
+.hero_container {
+  display: flex;
+  justify-content: center;
+  width: 85%;
 }
 
 .hero {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 100%;
   height: calc(100vh - 6em);
   border-bottom: 1px solid #7C7C7C;
