--- a/src/components/footer/styles.module.scss
+++ b/src/components/footer/styles.module.scss
@@ -2,6 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 90%;
+  border-top: 1px solid #7C7C7C;
+
+  @media screen and (min-width: 1800px) {
+    width: 1700px;
+  }
 }
 
 .socials {
