--- a/src/pages/home/styles.module.scss
+++ b/src/pages/home/styles.module.scss
@@ -3,7 +3,6 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 100%;
 }
 
 .logo {
@@ -21,8 +20,7 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  height: calc(100vh - 6em);
-  border-bottom: 1px solid #7C7C7C;
+  padding: 4em 0 4em 0;
 
   // Mobile
   @media screen and (max-width: 1100px) {
