--- a/src/pages/token/styles.module.scss
+++ b/src/pages/token/styles.module.scss
@@ -16,6 +16,9 @@
   width: 100%;
 }
 
+
+
+// hero
 .hero {
   display: flex;
   align-items: center;
@@ -52,5 +55,16 @@
   // Mobile
   @media screen and (max-width: 1100px) {
     display: none;
+  }
+}
+
+// Icons
+.icon_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  & * {
+    margin-bottom: 1em;
   }
 }
