--- a/src/components/footer/styles.module.scss
+++ b/src/components/footer/styles.module.scss
@@ -1,8 +1,8 @@
 .container {
+  background: red;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 90%;
   border-top: 1px solid #7C7C7C;
 
   @media screen and (min-width: 1800px) {
