--- a/src/pages/token/styles.module.scss
+++ b/src/pages/token/styles.module.scss
@@ -1,9 +1,9 @@
 .main_container {
+  background: green;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 100%;
 }
 
 .coin {
