--- a/src/pages/token/styles.module.scss
+++ b/src/pages/token/styles.module.scss
@@ -1,5 +1,4 @@
 .main_container {
-  background: green;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -53,7 +52,7 @@
   height: 100%;
 
   // Mobile
-  @media screen and (max-width: 1100px) {
+  @media screen and (max-width: 1500px) {
     display: none;
   }
 }
@@ -63,8 +62,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 
   & * {
     margin-bottom: 1em;
+  }
+
+}
+
+.info_conatiner {
+  // Mobile
+  @media screen and (min-width: 600) {
+    background: red !important;
+    flex-direction: row !important;
   }
 }
