--- a/src/pages/token/styles.module.scss
+++ b/src/pages/token/styles.module.scss
@@ -67,13 +67,24 @@
   & * {
     margin-bottom: 1em;
   }
-
 }
 
-.info_conatiner {
-  // Mobile
-  @media screen and (min-width: 600) {
-    background: red !important;
-    flex-direction: row !important;
+.info_container {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  flex-direction: column;
+
+  & div {
+    margin-bottom: 4em;
   }
+  // Mobile
+  @media screen and (min-width: 600px) {
+    flex-direction: row;
+
+    & div {
+      margin-bottom: initial;
+    }
+  }
+
 }
